[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rand = "0.8.5"
rsa = "0.9.6"
tokio = {version = "1.36.0", features = ["net", "rt-multi-thread", "macros", "time", "fs", "io-util"] }
# pso2packetlib = {path = "../pso2packetlib", features = ["connection", "ngs_enc", "proxy", "ppac", "tokio"]}
pso2packetlib = { git = "https://github.com/PhantasyServer/pso2-protocol-lib", rev = "f4232ce", features = ["connection", "ngs_enc", "proxy", "ppac", "tokio"] }
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
rmp-serde = "1.1.2"
toml = "0.8.8"
log = { version = "0.4.20", features = ["serde", "release_max_level_debug", "std"] }
simplelog = "0.12.1"

[profile.release]
lto = true
