[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rand = "0.8.5"
rsa = "0.9.6"
tokio = {version = "1.41.0", features = ["net", "rt-multi-thread", "macros", "time", "fs", "io-util"] }
# pso2packetlib = {path = "../pso2packetlib", features = ["connection", "ngs_enc", "proxy", "ppac", "tokio", "split_connection"]}
pso2packetlib = { version = "0.3.0", features = ["split_connection", "ngs_enc", "ppac", "tokio", "derive"] }
parking_lot = "0.12.3"
serde = { version = "1.0.214", features = ["derive"] }
rmp-serde = "1.3.0"
toml = "0.8.19"
log = { version = "0.4.22", features = ["serde", "release_max_level_debug", "std"] }
simplelog = "0.12.2"

[profile.release]
lto = true
