[package]
name = "ppak_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3", features = ["i128"]}
chrono = "0.4.26"
pso2packetlib = { git = "https://github.com/AntonnMal/pso2-protocol-lib", features = ["serde"] }
serde_json = "1.0.99"