[package]
name = "ppak_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3", features = ["i128"]}
chrono = "0.4.26"
pso2packetlib = { git = "https://github.com/PhantasyServer/pso2-protocol-lib", rev = "2070914", features = ["serde", "ppac", "ngs_packets"] }
serde = "1.0.174"
serde_json = "1.0.99"
